
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.2 - October ??, 2011

    


2.43.1 - September 12, 2011

    Changed the compiler to take into account the uses/2 directive when
    compiling calls to the database built-in methods. This change extends
    the semantics of the uses/2 directive and allows easier migration from
    plain Prolog applications to Logtalk.

    Added experimental support for using a predicate template as argument to
    the coinductive/1 directive. This template allows the specification of
    which arguments are meaningful for coinductive success. Based on similar
    functionality found on on Feliks Kluzniak's DRA meta-interpreter.

    Improved support for debugging coinductive predicates when using the
    Logtalk built-in debugger.

    Removed coinduction support for CxProlog. The current version of this
    compiler lacks a soft-cut built-in predicate or control construct, which
    is now required by the experimental coinduction implementation.

    Lifted a long-standing limitation that prevented the user definition of
    wrapper predicates for the bagof/3 and setof/3 built-in methods whenever
    the goal argument may use the ^/2 existential quantifier.

    Added support for the "^" meta-predicate meta-argument mode specifier
    suggested by Jan Wielemaker and found on SWI-Prolog 5.11.25. This mode
    specifier is useful when defining wrappers for the bagof/3 and setof/3
    built-in methods whenever the goal argument may use the ^/2 existential
    quantifier.

    Added "prolog_compiler" and "prolog_loader" compiler flags, which allow
    passing options to the back-end Prolog compiler built-in predicates that